Fixed spinbutton backdrop label color
spinbutton label became invisible in backdrop state and were barely
visible in disabled state.

This changes makes the backdrop and disabled states just a lighter
version of the color used in normal state.

--- a/Communitheme/gtk-3.0/_common.scss
+++ b/Communitheme/gtk-3.0/_common.scss
@@ -1208,7 +1208,7 @@ spinbutton {
       }
 
       &:disabled {
-        color: transparentize($insensitive_fg_color, 0.7);
+        color: transparentize($insensitive_fg_color, 0.4);
         background-color: transparent;
       }
 
@@ -1218,14 +1218,14 @@ spinbutton {
       }
 
       &:backdrop {
-        color: mix($backdrop_fg_color, $backdrop_base_color, 90%);
+        color: mix($fg_color, $base_color, 50%);
         background-color: transparent;
         border-color: transparentize($backdrop_borders_color, 0.7);
         transition: $backdrop_transition;
       }
 
       &:backdrop:disabled {
-        color: transparentize($backdrop_insensitive_color,0.7);
+        color: transparentize($insensitive_fg_color, 0.5);
         background-color: transparent;
         border-style: none none none solid; // It is needed or it gets overridden
 
